--- a/source/layouts/header.astro
+++ b/source/layouts/header.astro
@@ -1,5 +1,14 @@
 ---
-import { HamburguerMenu } from "@app/modules/navigation/components/hamburguer-menu";
+import { Link } from "@app/components/base";
+import {
+  LanguageSelector,
+  SUPPORTED_LOCALES,
+  getTranslations,
+} from "@app/modules/i18n";
+import {
+  HamburguerMenu,
+  DRAWER_ID,
+} from "@app/modules/navigation/components/hamburguer-menu";
 import { cn } from "@lib/utils/shadcn";
 import { NavLinks } from "@modules/navigation";
 import type { HTMLAttributes } from "astro/types";
@@ -11,7 +20,7 @@ const { class: clazz, ...props } = Astro.props;
 <header
   data-ensure-scrollbar-gutter
   class={cn(
-    "fixed inset-x-0 top-0 z-50 min-h-header content-center backdrop-blur-md",
+    "fixed inset-x-0 top-0 z-50 min-h-header content-center animate-fade-down animate-duration-200",
     clazz,
   )}
   {...props}
@@ -22,18 +31,37 @@ const { class: clazz, ...props } = Astro.props;
     <NavLinks
       variant="header"
       class="hidden w-full justify-between md:flex"
-    />
+    >
+      <LanguageSelector
+        currentLocale={Astro.locals.locale}
+        client:media="(min-width: 768px)"
+      />
+    </NavLinks>
 
     <HamburguerMenu
       className="justify-self-end md:hidden"
-      client:media="(max-width: 768px)"
+      client:media="(max-width: 767px)"
     >
-      <Fragment slot="menuContent">
+      <div
+        slot="menuContent"
+        class="max-h-[80vh] overflow-y-scroll svh:!max-h-[80svh]"
+      >
         <NavLinks
           variant="menu"
-          class="my-12 flex w-full justify-center"
-        />
-      </Fragment>
+          class="grid w-full grid-cols-1 grid-rows-[1fr,auto] [&>ul]:my-6 [&>ul]:justify-self-center"
+        >
+          <hr class="mx-4" />
+
+          <div class="flex flex-col px-6 py-2">
+            <LanguageSelector
+              currentLocale={Astro.locals.locale}
+              portal={DRAWER_ID}
+              client:media="(max-width: 767px)"
+              class="ml-auto"
+            />
+          </div>
+        </NavLinks>
+      </div>
     </HamburguerMenu>
   </div>
 </header>
@@ -47,6 +75,7 @@ const { class: clazz, ...props } = Astro.props;
 
   @keyframes apply-bg {
     to {
+      backdrop-filter: blur(12px);
       background-color: theme("colors.background");
     }
   }
