--- a/source/sections/hero/content.astro
+++ b/source/sections/hero/content.astro
@@ -7,6 +7,7 @@ import { email, github, linkedIn } from "@lib/data/socials";
 import { getTranslations } from "@modules/i18n";
 
 import profile from "./assets/profile.webp";
+import { ContactDialog } from "../about/components/contact-dialog";
 
 // Retrieve the localized strings for the hero section.
 const { locale } = Astro.locals;
