--- a/source/layouts/header.astro
+++ b/source/layouts/header.astro
@@ -1,16 +1,12 @@
 ---
-import { Link } from "@app/components/base";
+import { LanguageSelector } from "@app/modules/i18n";
+import PageLinks from "@modules/navigation/components/page-links.astro";
 import {
-  LanguageSelector,
-  SUPPORTED_LOCALES,
-  getTranslations,
-} from "@app/modules/i18n";
-import {
-  HamburguerMenu,
+  HamburgerMenu,
   DRAWER_ID,
-} from "@app/modules/navigation/components/hamburguer-menu";
+} from "@modules/navigation/components/hamburger-menu";
+
 import { cn } from "@lib/utils/shadcn";
-import { NavLinks } from "@modules/navigation";
 import type { HTMLAttributes } from "astro/types";
 
 export type Props = HTMLAttributes<"header"> & {};
@@ -19,50 +15,36 @@ const { class: clazz, ...props } = Astro.props;
 
 <header
   data-ensure-scrollbar-gutter
-  class={cn(
-    "fixed inset-x-0 top-0 z-50 min-h-header content-center animate-fade-down animate-duration-200",
-    clazz,
-  )}
+  class={cn("fixed inset-x-0 top-0 z-50 min-h-header content-center", clazz)}
   {...props}
 >
   <div
-    class="mx-auto grid max-w-screen-xl px-6 py-4 font-header md:flex md:items-center md:justify-around"
+    class="mx-auto flex max-w-screen-xl items-center justify-between px-6 py-4 font-header md:justify-around"
   >
-    <NavLinks
+    <PageLinks
       variant="header"
       class="hidden w-full justify-between md:flex"
-    >
-      <LanguageSelector
-        currentLocale={Astro.locals.locale}
-        client:media="(min-width: 768px)"
-      />
-    </NavLinks>
+    />
 
-    <HamburguerMenu
-      className="justify-self-end md:hidden"
+    <HamburgerMenu
+      className="md:hidden"
       client:media="(max-width: 767px)"
     >
       <div
         slot="menuContent"
         class="max-h-[80vh] overflow-y-scroll svh:!max-h-[80svh]"
       >
-        <NavLinks
+        <PageLinks
           variant="menu"
           class="grid w-full grid-cols-1 grid-rows-[1fr,auto] [&>ul]:my-6 [&>ul]:justify-self-center"
-        >
-          <hr class="mx-4" />
-
-          <div class="flex flex-col px-6 py-2">
-            <LanguageSelector
-              currentLocale={Astro.locals.locale}
-              portal={DRAWER_ID}
-              client:media="(max-width: 767px)"
-              class="ml-auto"
-            />
-          </div>
-        </NavLinks>
+        />
       </div>
-    </HamburguerMenu>
+    </HamburgerMenu>
+
+    <LanguageSelector
+      currentLocale={Astro.locals.locale}
+      client:idle
+    />
   </div>
 </header>
 
