--- a/source/sections/about/content.astro
+++ b/source/sections/about/content.astro
@@ -1,5 +1,5 @@
 ---
-import ObservedSection from "@app/layouts/observed-section.astro";
+import { Section } from "@app/layouts";
 
 import { ContactDialog } from "./components/contact-dialog";
 
@@ -27,7 +27,7 @@ const translations = getTranslations(locale);
 const t = translations.sections.about;
 ---
 
-<ObservedSection
+<Section
   order={4}
   id={t.id}
   title={t.title}
@@ -357,7 +357,7 @@ const t = translations.sections.about;
       ]}
     >
       <header class="flex items-center gap-4 font-header text-xl font-bold">
-        <DynamicClock
+        <!-- <DynamicClock
           class="size-[1.2em]"
           client:idle
         />
@@ -368,188 +368,189 @@ const t = translations.sections.about;
         class="size-full"
         locale={Astro.locals.locale}
         client:load
-      />
-    </article>
-
-    <article
-      class:list={[
-        "col-span-10 col-start-1 row-start-4 flex flex-col p-6",
-        "md:col-span-4 md:col-start-6 md:row-start-2 md:row-end-3 md:px-8 md:py-6",
-        "lg:!col-span-4 lg:col-start-1 lg:row-start-2 lg:row-end-3",
-        "xl:!col-span-4 xl:col-start-1 xl:!row-start-5 xl:!row-end-6",
-        "[@media(width>=600px)]:col-span-5",
-      ]}
-    >
-      <header class="flex items-center gap-4 font-header text-xl font-bold">
-        <picture>
-          <source
-            srcset="/images/emojis/globe/globe.avif"
-            type="image/avif"
-          />
-          <source
-            srcset="/images/emojis/globe/globe.webp"
-            type="image/webp"
-          />
-          <img
-            src="/images/emojis/globe/globe.png"
-            alt="Globe"
-            width={64}
-            height={64}
-            decoding="async"
-            loading="lazy"
-            class="size-[1.2em]"
-          />
-        </picture>
-        <h3 class="mt-1.5">Links</h3>
+      /> -->
       </header>
 
-      <ul
-        data-socials
+      <article
         class:list={[
-          "mt-6 grid grow grid-cols-4 grid-rows-2 gap-y-3",
-          "md:grid-cols-3 md:grid-rows-3 md:gap-y-0",
-          "lg:grid-cols-4 lg:grid-rows-2",
-          "xl:gap-y-2",
+          "col-span-10 col-start-1 row-start-4 flex flex-col p-6",
+          "md:col-span-4 md:col-start-6 md:row-start-2 md:row-end-3 md:px-8 md:py-6",
+          "lg:!col-span-4 lg:col-start-1 lg:row-start-2 lg:row-end-3",
+          "xl:!col-span-4 xl:col-start-1 xl:!row-start-5 xl:!row-end-6",
+          "[@media(width>=600px)]:col-span-5",
         ]}
       >
-        {
-          socials.map(({ href, i18nKey, iconKey }, index) => {
-            const translatedLabel = translations.socials[i18nKey];
-            const position = index > 3 ? "bottom" : "top";
+        <header class="flex items-center gap-4 font-header text-xl font-bold">
+          <picture>
+            <source
+              srcset="/images/emojis/globe/globe.avif"
+              type="image/avif"
+            />
+            <source
+              srcset="/images/emojis/globe/globe.webp"
+              type="image/webp"
+            />
+            <img
+              src="/images/emojis/globe/globe.png"
+              alt="Globe"
+              width={64}
+              height={64}
+              decoding="async"
+              loading="lazy"
+              class="size-[1.2em]"
+            />
+          </picture>
+          <h3 class="mt-1.5">Links</h3>
+        </header>
 
-            return (
-              <li
-                class:list={[
-                  "size-fit self-center justify-self-center rounded-lg bg-background text-foreground transition duration-200",
-                  "hover:bg-accent hover:text-accent-foreground hover:brightness-110",
-                ]}
-              >
-                <Link
-                  {href}
-                  label={`${translatedLabel}`}
-                  targetBlank
-                  withTooltip={{
-                    content: `${translatedLabel}`,
-                    placement: position,
-                  }}
+        <ul
+          data-socials
+          class:list={[
+            "mt-6 grid grow grid-cols-4 grid-rows-2 gap-y-3",
+            "md:grid-cols-3 md:grid-rows-3 md:gap-y-0",
+            "lg:grid-cols-4 lg:grid-rows-2",
+            "xl:gap-y-2",
+          ]}
+        >
+          {
+            socials.map(({ href, i18nKey, iconKey }, index) => {
+              const translatedLabel = translations.socials[i18nKey];
+              const position = index > 3 ? "bottom" : "top";
+
+              return (
+                <li
+                  class:list={[
+                    "size-fit self-center justify-self-center rounded-lg bg-background text-foreground transition duration-200",
+                    "hover:bg-accent hover:text-accent-foreground hover:brightness-110",
+                  ]}
                 >
-                  <Icon
-                    name={iconKey}
-                    class="box-content size-7 p-2 text-current md:size-8 lg:size-9"
-                  />
-                </Link>
-              </li>
-            );
-          })
-        }
-      </ul>
-    </article>
+                  <Link
+                    {href}
+                    label={`${translatedLabel}`}
+                    targetBlank
+                    withTooltip={{
+                      content: `${translatedLabel}`,
+                      placement: position,
+                    }}
+                  >
+                    <Icon
+                      name={iconKey}
+                      class="box-content size-7 p-2 text-current md:size-8 lg:size-9"
+                    />
+                  </Link>
+                </li>
+              );
+            })
+          }
+        </ul>
+      </article>
 
-    <article
-      class:list={[
-        "relative col-span-10 col-start-1 row-start-3 p-6 pb-8",
-        "md:col-span-5 md:col-start-6 md:row-span-2 md:row-start-2 md:px-10 md:py-8",
-        "lg:col-span-6 lg:col-start-5 lg:row-span-1 lg:row-start-4",
-        "xl:!col-span-6 xl:!col-start-5 xl:row-span-2",
-      ]}
-    >
-      <header class="flex items-center gap-4 font-header text-xl font-bold">
-        <picture>
-          <source
-            srcset="/images/emojis/graduation-cap/graduation-cap.avif"
-            type="image/avif"
-          />
-          <source
-            srcset="/images/emojis/graduation-cap/graduation-cap.webp"
-            type="image/webp"
-          />
-          <img
-            src="/images/emojis/graduation-cap/graduation-cap.png"
-            alt="Graduation Cap"
-            width={64}
-            height={64}
-            decoding="async"
-            loading="lazy"
-            class="size-[1.5em]"
-          />
-        </picture>
-
-        <h3 class="mt-3">Education</h3>
-      </header>
-
-      <ul
-        class="mt-6"
-        aria-label="My Education"
+      <article
+        class:list={[
+          "relative col-span-10 col-start-1 row-start-3 p-6 pb-8",
+          "md:col-span-5 md:col-start-6 md:row-span-2 md:row-start-2 md:px-10 md:py-8",
+          "lg:col-span-6 lg:col-start-5 lg:row-span-1 lg:row-start-4",
+          "xl:!col-span-6 xl:!col-start-5 xl:row-span-2",
+        ]}
       >
-        {
-          education.map((item) => {
-            const { startDate, endDate } = item;
-            const start = formatter.format(startDate);
-            const end = formatter.format(endDate);
+        <header class="flex items-center gap-4 font-header text-xl font-bold">
+          <picture>
+            <source
+              srcset="/images/emojis/graduation-cap/graduation-cap.avif"
+              type="image/avif"
+            />
+            <source
+              srcset="/images/emojis/graduation-cap/graduation-cap.webp"
+              type="image/webp"
+            />
+            <img
+              src="/images/emojis/graduation-cap/graduation-cap.png"
+              alt="Graduation Cap"
+              width={64}
+              height={64}
+              decoding="async"
+              loading="lazy"
+              class="size-[1.5em]"
+            />
+          </picture>
 
-            return (
-              <li>
-                <Link
-                  href={item.url}
-                  label={`Official site of my university`}
-                  class="text-balance font-sans text-lg font-bold transition duration-200 group-focus-within:text-primary lg:hover:text-primary"
-                  targetBlank
-                  withExternalLinkArrow
-                >
-                  <span>{item.title(locale)}</span>
-                </Link>
+          <h3 class="mt-3">Education</h3>
+        </header>
 
-                <div class="mt-2 text-balance text-base font-semibold text-muted-foreground/80 transition-colors duration-200">
-                  <span>{item.location(locale)}</span>
-                  <span class="opacity-50">{" | "}</span>
-                  <span aria-label="">
-                    <time
-                      datetime={`${startDate.getFullYear()}-${startDate.getMonth() + 1}`}
-                    >
-                      {start}
-                    </time>
-                    {" - "}
-                    <time
-                      datetime={`${endDate.getFullYear()}-${endDate.getMonth() + 1}`}
-                    >
-                      {end}
-                    </time>
-                  </span>
-                </div>
+        <ul
+          class="mt-6"
+          aria-label="My Education"
+        >
+          {
+            education.map((item) => {
+              const { startDate, endDate } = item;
+              const start = formatter.format(startDate);
+              const end = formatter.format(endDate);
 
-                <p
-                  data-education-description
-                  class="mt-8 max-w-[800px] text-pretty text-base text-foreground/80"
-                  set:html={item.description(locale)}
-                />
-              </li>
-            );
-          })
-        }
-      </ul>
+              return (
+                <li>
+                  <Link
+                    href={item.url}
+                    label={`Official site of my university`}
+                    class="text-balance font-sans text-lg font-bold transition duration-200 group-focus-within:text-primary lg:hover:text-primary"
+                    targetBlank
+                    withExternalLinkArrow
+                  >
+                    <span>{item.title(locale)}</span>
+                  </Link>
+
+                  <div class="mt-2 text-balance text-base font-semibold text-muted-foreground/80 transition-colors duration-200">
+                    <span>{item.location(locale)}</span>
+                    <span class="opacity-50">{" | "}</span>
+                    <span aria-label="">
+                      <time
+                        datetime={`${startDate.getFullYear()}-${startDate.getMonth() + 1}`}
+                      >
+                        {start}
+                      </time>
+                      {" - "}
+                      <time
+                        datetime={`${endDate.getFullYear()}-${endDate.getMonth() + 1}`}
+                      >
+                        {end}
+                      </time>
+                    </span>
+                  </div>
+
+                  <p
+                    data-education-description
+                    class="mt-8 max-w-[800px] text-pretty text-base text-foreground/80"
+                    set:html={item.description(locale)}
+                  />
+                </li>
+              );
+            })
+          }
+        </ul>
+      </article>
     </article>
   </div>
-</ObservedSection>
 
-<style>
-  :global([data-education-description] a) {
-    text-decoration: underline;
-    text-decoration-color: theme("colors.primary.DEFAULT");
-    text-underline-offset: 0.15em;
-  }
-
-  [data-carousel] {
-    animation: carousel-slide calc(var(--items) * 3s) steps(var(--items))
-      infinite;
-  }
-
-  @keyframes carousel-slide {
-    0% {
-      transform: translateX(0);
+  <style>
+    :global([data-education-description] a) {
+      text-decoration: underline;
+      text-decoration-color: theme("colors.primary.DEFAULT");
+      text-underline-offset: 0.15em;
     }
 
-    100% {
-      transform: translateX(calc(var(--items) * -100%));
+    [data-carousel] {
+      animation: carousel-slide calc(var(--items) * 3s) steps(var(--items))
+        infinite;
     }
-  }
-</style>
+
+    @keyframes carousel-slide {
+      0% {
+        transform: translateX(0);
+      }
+
+      100% {
+        transform: translateX(calc(var(--items) * -100%));
+      }
+    }
+  </style>
+</Section>
