--- a/source/sections/projects/content.astro
+++ b/source/sections/projects/content.astro
@@ -3,7 +3,7 @@ import { Icon } from "astro-icon/components";
 
 import { Link } from "@app/components/base";
 import { Button } from "@app/components/ui/react";
-import { ObservedSection } from "@app/layouts";
+import { Section } from "@app/layouts";
 import { getTranslations, getLocaleRoute } from "@modules/i18n";
 
 import { projects, current } from "./lib/data";
@@ -19,23 +19,25 @@ const currentDescription = current.description(locale);
 ---
 
 <script>
-  const currentProject = document.querySelector(
-    "[data-current-project]",
-  ) as HTMLElement;
+  document.addEventListener("astro:page-load", () => {
+    const currentProject = document.querySelector(
+      "[data-current-project]",
+    ) as HTMLElement;
 
-  const button = currentProject.querySelector("button")!;
-  button.addEventListener(
-    "click",
-    () => {
-      currentProject.classList.add("show");
-    },
-    { once: true },
-  );
+    const button = currentProject.querySelector("button")!;
+    button.addEventListener(
+      "click",
+      () => {
+        currentProject.classList.add("show");
+      },
+      { once: true },
+    );
+  });
 </script>
 
-<ObservedSection
+<Section
   id={t.id}
-  class="mx-auto max-w-screen-2xl animate-fade px-4 animate-delay-[1500ms] xs:px-6"
+  class="mx-auto max-w-screen-2xl px-4 xs:px-6"
   title={t.title}
   order={2}
 >
@@ -90,9 +92,6 @@ const currentDescription = current.description(locale);
       >
         {t.buttonReveal}
       </Button>
-      <p class="mt-3 text-base font-medium text-foreground/60">
-        {t.currentProject}
-      </p>
     </div>
   </div>
 
@@ -113,7 +112,7 @@ const currentDescription = current.description(locale);
       </Link>
     </p>
   </div>
-</ObservedSection>
+</Section>
 
 <style>
   @property --mask-alpha {
