--- a/source/sections/projects/components/project-card.astro
+++ b/source/sections/projects/components/project-card.astro
@@ -3,7 +3,7 @@ import { Picture } from "astro:assets";
 import { Icon } from "astro-icon/components";
 import type { HTMLAttributes } from "astro/types";
 
-import { SkillBadge } from "@app/sections/skills";
+import SkillBadge from "@components/skills/skill-badge.astro";
 import { Link, Video } from "@components/base";
 import { cn } from "@lib/utils/shadcn";
 
