--- a/source/components/skills/skill-badge.astro
+++ b/source/components/skills/skill-badge.astro
@@ -1,10 +1,9 @@
 ---
-import { cn } from "@lib/utils/shadcn";
-import Badge, { type Props as BadgeProps } from "@components/base/badge.astro";
+import { Icon } from "astro-icon/components";
 
-import { type SkillName } from "../lib/types";
-import { skills } from "../lib/data";
-import SkillIcon from "./skill-icon.svelte";
+import { cn } from "@lib/utils/shadcn";
+import { skills, type SkillName } from "@lib/data/skills";
+import { Badge, type BadgeProps } from "@components/base";
 
 export type Props = BadgeProps & {
   skill: SkillName;
@@ -21,9 +20,10 @@ const data = skills.find((s) => s.name === skill)!;
     clazz,
   )}
 >
-  <SkillIcon
+  <Icon
     name={data.icon}
     class="size-4"
+    is:inline
   />
   <span>{skill}</span>
 </Badge>
