--- a/source/sections/about/content.astro
+++ b/source/sections/about/content.astro
@@ -12,8 +12,6 @@ import DynamicClock from "./components/dynamic-clock.svelte";
 import { education } from "./lib/data";
 import { getTranslations } from "@modules/i18n";
 
-import kh from "./assets/games/kingdom-hearts.png";
-
 import { socials } from "@lib/data/socials";
 import Picture from "astro/components/Picture.astro";
 
@@ -253,74 +251,6 @@ const t = translations.sections.about;
 
     <article
       class:list={[
-        "col-span-10 col-start-1 row-start-2 flex flex-col py-6",
-        "md:col-span-5 md:col-start-6 md:row-start-4",
-        "lg:col-span-6 lg:-col-start-7 lg:row-span-2 lg:row-start-2",
-        "xl:!col-span-4 xl:col-start-1 xl:row-span-2 xl:row-start-2 xl:row-end-5",
-      ]}
-    >
-      <header
-        class="flex w-full items-center gap-4 px-6 font-header text-xl font-bold md:px-8"
-      >
-        <picture>
-          <source
-            srcset="/images/emojis/star/star.webp"
-            type="image/webp"
-          />
-          <source
-            srcset="/images/emojis/star/star.avif"
-            type="image/avif"
-          />
-          <source
-            srcset="/images/emojis/star/star.png"
-            type="image/png"
-          />
-          <img
-            src="/images/emojis/star/star.gif"
-            alt="Star"
-            width={64}
-            height={64}
-            decoding="async"
-            loading="lazy"
-            class="size-[1.4em]"
-          />
-        </picture>
-        <h3 class="mt-1.5">Favorites</h3>
-      </header>
-
-      <div
-        class="flex w-full grow -translate-x-full items-center justify-start"
-        data-carousel
-        style="--items: 2;"
-      >
-        <div class="relative my-auto w-full shrink-0 overflow-clip p-6 md:px-8">
-          <Picture
-            src={kh}
-            alt="Kingdom Hearts"
-            formats={["avif", "webp", "png"]}
-            class="mx-auto aspect-square size-full w-4/5 rounded-lg object-cover"
-          />
-        </div>
-
-        <div class="relative my-auto w-full shrink-0 overflow-clip p-6 md:px-8">
-          <Picture
-            src={kh}
-            alt="Kingdom Hearts"
-            formats={["avif", "webp", "png"]}
-            class="mx-auto aspect-square size-full w-4/5 rounded-lg object-cover"
-          />
-        </div>
-      </div>
-      <div>
-        <p class="text-center text-lg font-semibold text-foreground/80">
-          Kingdom Hearts
-        </p>
-      </div>
-      <!-- <FavoriteCarousel client:visible /> -->
-    </article>
-
-    <article
-      class:list={[
         "relative col-span-10 col-start-1 row-start-6 flex aspect-square min-h-[413px] w-full items-end justify-center p-5",
         "sm:max-h-[420px]",
         "md:col-span-5 md:col-start-1 md:!row-start-4 md:aspect-auto md:max-h-none md:px-8 md:py-10",
@@ -329,11 +259,6 @@ const t = translations.sections.about;
         "[@media(width>=600px)]:row-start-5",
       ]}
     >
-      <!-- <CharacterView
-        className="pointer-events-none absolute inset-0 -top-4 size-full xs:-top-8"
-        client:visible={{ rootMargin: "50%" }}
-      /> -->
-
       <div
         class:list={[
           "absolute inset-0 top-1/2 z-20 h-1/2 w-full gradient-mask-t-50",
@@ -357,7 +282,7 @@ const t = translations.sections.about;
       ]}
     >
       <header class="flex items-center gap-4 font-header text-xl font-bold">
-        <!-- <DynamicClock
+        <DynamicClock
           class="size-[1.2em]"
           client:idle
         />
@@ -368,189 +293,188 @@ const t = translations.sections.about;
         class="size-full"
         locale={Astro.locals.locale}
         client:load
-      /> -->
+      />
+    </article>
+
+    <article
+      class:list={[
+        "col-span-10 col-start-1 row-start-4 flex flex-col p-6",
+        "md:col-span-4 md:col-start-6 md:row-start-2 md:row-end-3 md:px-8 md:py-6",
+        "lg:!col-span-4 lg:col-start-1 lg:row-start-2 lg:row-end-3",
+        "xl:!col-span-4 xl:col-start-1 xl:!row-start-5 xl:!row-end-6",
+        "[@media(width>=600px)]:col-span-5",
+      ]}
+    >
+      <header class="flex items-center gap-4 font-header text-xl font-bold">
+        <picture>
+          <source
+            srcset="/images/emojis/globe/globe.avif"
+            type="image/avif"
+          />
+          <source
+            srcset="/images/emojis/globe/globe.webp"
+            type="image/webp"
+          />
+          <img
+            src="/images/emojis/globe/globe.png"
+            alt="Globe"
+            width={64}
+            height={64}
+            decoding="async"
+            loading="lazy"
+            class="size-[1.2em]"
+          />
+        </picture>
+        <h3 class="mt-1.5">Links</h3>
       </header>
 
-      <article
+      <ul
+        data-socials
         class:list={[
-          "col-span-10 col-start-1 row-start-4 flex flex-col p-6",
-          "md:col-span-4 md:col-start-6 md:row-start-2 md:row-end-3 md:px-8 md:py-6",
-          "lg:!col-span-4 lg:col-start-1 lg:row-start-2 lg:row-end-3",
-          "xl:!col-span-4 xl:col-start-1 xl:!row-start-5 xl:!row-end-6",
-          "[@media(width>=600px)]:col-span-5",
+          "mt-6 grid grow grid-cols-4 grid-rows-2 gap-y-3",
+          "md:grid-cols-3 md:grid-rows-3 md:gap-y-0",
+          "lg:grid-cols-4 lg:grid-rows-2",
+          "xl:gap-y-2",
         ]}
       >
-        <header class="flex items-center gap-4 font-header text-xl font-bold">
-          <picture>
-            <source
-              srcset="/images/emojis/globe/globe.avif"
-              type="image/avif"
-            />
-            <source
-              srcset="/images/emojis/globe/globe.webp"
-              type="image/webp"
-            />
-            <img
-              src="/images/emojis/globe/globe.png"
-              alt="Globe"
-              width={64}
-              height={64}
-              decoding="async"
-              loading="lazy"
-              class="size-[1.2em]"
-            />
-          </picture>
-          <h3 class="mt-1.5">Links</h3>
-        </header>
+        {
+          socials.map(({ href, i18nKey, iconKey }, index) => {
+            const translatedLabel = translations.socials[i18nKey];
+            const position = index > 3 ? "bottom" : "top";
 
-        <ul
-          data-socials
-          class:list={[
-            "mt-6 grid grow grid-cols-4 grid-rows-2 gap-y-3",
-            "md:grid-cols-3 md:grid-rows-3 md:gap-y-0",
-            "lg:grid-cols-4 lg:grid-rows-2",
-            "xl:gap-y-2",
-          ]}
-        >
-          {
-            socials.map(({ href, i18nKey, iconKey }, index) => {
-              const translatedLabel = translations.socials[i18nKey];
-              const position = index > 3 ? "bottom" : "top";
-
-              return (
-                <li
-                  class:list={[
-                    "size-fit self-center justify-self-center rounded-lg bg-background text-foreground transition duration-200",
-                    "hover:bg-accent hover:text-accent-foreground hover:brightness-110",
-                  ]}
+            return (
+              <li
+                class:list={[
+                  "size-fit self-center justify-self-center rounded-lg bg-background text-foreground transition duration-200",
+                  "hover:bg-accent hover:text-accent-foreground hover:brightness-110",
+                ]}
+              >
+                <Link
+                  {href}
+                  label={`${translatedLabel}`}
+                  targetBlank
+                  withTooltip={{
+                    content: `${translatedLabel}`,
+                    placement: position,
+                  }}
                 >
-                  <Link
-                    {href}
-                    label={`${translatedLabel}`}
-                    targetBlank
-                    withTooltip={{
-                      content: `${translatedLabel}`,
-                      placement: position,
-                    }}
-                  >
-                    <Icon
-                      name={iconKey}
-                      class="box-content size-7 p-2 text-current md:size-8 lg:size-9"
-                    />
-                  </Link>
-                </li>
-              );
-            })
-          }
-        </ul>
-      </article>
-
-      <article
-        class:list={[
-          "relative col-span-10 col-start-1 row-start-3 p-6 pb-8",
-          "md:col-span-5 md:col-start-6 md:row-span-2 md:row-start-2 md:px-10 md:py-8",
-          "lg:col-span-6 lg:col-start-5 lg:row-span-1 lg:row-start-4",
-          "xl:!col-span-6 xl:!col-start-5 xl:row-span-2",
-        ]}
-      >
-        <header class="flex items-center gap-4 font-header text-xl font-bold">
-          <picture>
-            <source
-              srcset="/images/emojis/graduation-cap/graduation-cap.avif"
-              type="image/avif"
-            />
-            <source
-              srcset="/images/emojis/graduation-cap/graduation-cap.webp"
-              type="image/webp"
-            />
-            <img
-              src="/images/emojis/graduation-cap/graduation-cap.png"
-              alt="Graduation Cap"
-              width={64}
-              height={64}
-              decoding="async"
-              loading="lazy"
-              class="size-[1.5em]"
-            />
-          </picture>
-
-          <h3 class="mt-3">Education</h3>
-        </header>
-
-        <ul
-          class="mt-6"
-          aria-label="My Education"
-        >
-          {
-            education.map((item) => {
-              const { startDate, endDate } = item;
-              const start = formatter.format(startDate);
-              const end = formatter.format(endDate);
-
-              return (
-                <li>
-                  <Link
-                    href={item.url}
-                    label={`Official site of my university`}
-                    class="text-balance font-sans text-lg font-bold transition duration-200 group-focus-within:text-primary lg:hover:text-primary"
-                    targetBlank
-                    withExternalLinkArrow
-                  >
-                    <span>{item.title(locale)}</span>
-                  </Link>
-
-                  <div class="mt-2 text-balance text-base font-semibold text-muted-foreground/80 transition-colors duration-200">
-                    <span>{item.location(locale)}</span>
-                    <span class="opacity-50">{" | "}</span>
-                    <span aria-label="">
-                      <time
-                        datetime={`${startDate.getFullYear()}-${startDate.getMonth() + 1}`}
-                      >
-                        {start}
-                      </time>
-                      {" - "}
-                      <time
-                        datetime={`${endDate.getFullYear()}-${endDate.getMonth() + 1}`}
-                      >
-                        {end}
-                      </time>
-                    </span>
-                  </div>
-
-                  <p
-                    data-education-description
-                    class="mt-8 max-w-[800px] text-pretty text-base text-foreground/80"
-                    set:html={item.description(locale)}
+                  <Icon
+                    name={iconKey}
+                    class="box-content size-7 p-2 text-current md:size-8 lg:size-9"
                   />
-                </li>
-              );
-            })
-          }
-        </ul>
-      </article>
+                </Link>
+              </li>
+            );
+          })
+        }
+      </ul>
+    </article>
+
+    <article
+      class:list={[
+        "relative col-span-10 col-start-1 row-start-3 p-6 pb-8",
+        "md:col-span-5 md:col-start-6 md:row-span-2 md:row-start-2 md:px-10 md:py-8",
+        "lg:col-span-6 lg:col-start-5 lg:row-span-1 lg:row-start-4",
+        "xl:!col-span-6 xl:!col-start-5 xl:row-span-2",
+      ]}
+    >
+      <header class="flex items-center gap-4 font-header text-xl font-bold">
+        <picture>
+          <source
+            srcset="/images/emojis/graduation-cap/graduation-cap.avif"
+            type="image/avif"
+          />
+          <source
+            srcset="/images/emojis/graduation-cap/graduation-cap.webp"
+            type="image/webp"
+          />
+          <img
+            src="/images/emojis/graduation-cap/graduation-cap.png"
+            alt="Graduation Cap"
+            width={64}
+            height={64}
+            decoding="async"
+            loading="lazy"
+            class="size-[1.5em]"
+          />
+        </picture>
+
+        <h3 class="mt-3">Education</h3>
+      </header>
+
+      <ul
+        class="mt-6"
+        aria-label="My Education"
+      >
+        {
+          education.map((item) => {
+            const { startDate, endDate } = item;
+            const start = formatter.format(startDate);
+            const end = formatter.format(endDate);
+
+            return (
+              <li>
+                <Link
+                  href={item.url}
+                  label={`Official site of my university`}
+                  class="text-balance font-sans text-lg font-bold transition duration-200 group-focus-within:text-primary lg:hover:text-primary"
+                  targetBlank
+                  withExternalLinkArrow
+                >
+                  <span>{item.title(locale)}</span>
+                </Link>
+
+                <div class="mt-2 text-balance text-base font-semibold text-muted-foreground/80 transition-colors duration-200">
+                  <span>{item.location(locale)}</span>
+                  <span class="opacity-50">{" | "}</span>
+                  <span aria-label="">
+                    <time
+                      datetime={`${startDate.getFullYear()}-${startDate.getMonth() + 1}`}
+                    >
+                      {start}
+                    </time>
+                    {" - "}
+                    <time
+                      datetime={`${endDate.getFullYear()}-${endDate.getMonth() + 1}`}
+                    >
+                      {end}
+                    </time>
+                  </span>
+                </div>
+
+                <p
+                  data-education-description
+                  class="mt-8 max-w-[800px] text-pretty text-base text-foreground/80"
+                  set:html={item.description(locale)}
+                />
+              </li>
+            );
+          })
+        }
+      </ul>
     </article>
   </div>
-
-  <style>
-    :global([data-education-description] a) {
-      text-decoration: underline;
-      text-decoration-color: theme("colors.primary.DEFAULT");
-      text-underline-offset: 0.15em;
-    }
-
-    [data-carousel] {
-      animation: carousel-slide calc(var(--items) * 3s) steps(var(--items))
-        infinite;
-    }
-
-    @keyframes carousel-slide {
-      0% {
-        transform: translateX(0);
-      }
-
-      100% {
-        transform: translateX(calc(var(--items) * -100%));
-      }
-    }
-  </style>
 </Section>
+
+<style>
+  :global([data-education-description] a) {
+    text-decoration: underline;
+    text-decoration-color: theme("colors.primary.DEFAULT");
+    text-underline-offset: 0.15em;
+  }
+
+  [data-carousel] {
+    animation: carousel-slide calc(var(--items) * 3s) steps(var(--items))
+      infinite;
+  }
+
+  @keyframes carousel-slide {
+    0% {
+      transform: translateX(0);
+    }
+
+    100% {
+      transform: translateX(calc(var(--items) * -100%));
+    }
+  }
+</style>
