--- a/source/sections/hero/content.astro
+++ b/source/sections/hero/content.astro
@@ -14,7 +14,7 @@ const translations = getTranslations(locale);
 const t = translations.sections.hero;
 ---
 
-<section id={t.id} class="mx-auto max-w-screen-lg content-center px-4 xs:px-6">
+<section class="mx-auto max-w-screen-lg content-center px-4 xs:px-6">
   <header class="relative">
     <h1 class="text-balance font-header">
       <span
