--- a/source/sections/projects/content.astro
+++ b/source/sections/projects/content.astro
@@ -49,16 +49,17 @@ const currentDescription = current.description(locale);
 
   <div
     data-current-project
-    class="relative"
+    class="pointer-events-none relative"
   >
-    <div class="pointer-events-none grid overflow-hidden">
+    <div class="grid overflow-hidden">
       <div class="overflow-hidden *:my-12">
         <ProjectCard
           name={current.name(locale)}
           headline={current.headline(locale)}
           relatedSkills={current.relatedSkills}
           preview={projects[0].preview}
-          class="pointer-events-auto relative -z-10 sm:mx-4 lg:mt-12"
+          data-current-project-card
+          class="relative sm:mx-4 lg:mt-12"
         >
           <Fragment slot="description">
             {
@@ -138,8 +139,17 @@ const currentDescription = current.description(locale);
     }
   }
 
+  [data-current-project] {
+    user-select: none;
+  }
+
   [data-current-project].show {
     animation: remove-pb 0.6s forwards ease-in-out 0.2s;
+  }
+
+  [data-current-project].show [data-current-project-card] {
+    pointer-events: auto;
+    user-select: text;
   }
 
   [data-current-project] > div:first-of-type {
